First game report explo

--- a/notebooks/Exploration_first_game_stats.ipynb
+++ b/notebooks/Exploration_first_game_stats.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +23,7 @@
        "'/Users/alexisfayolle/code/alexisfyll/bookmaker'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
        "3  55fd92c7  1df6b87e  47c64c55  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
        "'26a7f90c'"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
        "'https://fbref.com/en/matches/26a7f90c'"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
        "'78%'"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -245,20 +245,20 @@
        "'18bb7c10'"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Get home team stats \n",
+    "# Get home team id \n",
     "home_id = df_g.loc[game_index, 'home_id']\n",
     "home_id"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -267,14 +267,15 @@
        "<tfoot><tr><th class=\"left\" data-stat=\"player\" scope=\"row\">14 Players</th><td class=\"right iz\" data-stat=\"shirtnumber\"></td><td class=\"left iz\" data-stat=\"nationality\"></td><td class=\"center iz\" data-stat=\"position\"></td><td class=\"center iz\" data-stat=\"age\"></td><td class=\"right\" data-stat=\"minutes\">990</td><td class=\"right group_start\" data-stat=\"goals\">2</td><td class=\"right\" data-stat=\"assists\">2</td><td class=\"right iz\" data-stat=\"pens_made\">0</td><td class=\"right iz\" data-stat=\"pens_att\">0</td><td class=\"right\" data-stat=\"shots\">15</td><td class=\"right\" data-stat=\"shots_on_target\">7</td><td class=\"right\" data-stat=\"cards_yellow\">2</td><td class=\"right iz\" data-stat=\"cards_red\">0</td><td class=\"right\" data-stat=\"touches\">902</td><td class=\"right\" data-stat=\"tackles\">19</td><td class=\"right\" data-stat=\"interceptions\">7</td><td class=\"right\" data-stat=\"blocks\">6</td><td class=\"right group_start\" data-stat=\"xg\">0.8</td><td class=\"right\" data-stat=\"npxg\">0.8</td><td class=\"right\" data-stat=\"xg_assist\">0.6</td><td class=\"right group_start\" data-stat=\"sca\">30</td><td class=\"right\" data-stat=\"gca\">4</td><td class=\"right group_start\" data-stat=\"passes_completed\">716</td><td class=\"right\" data-stat=\"passes\">807</td><td class=\"right\" data-stat=\"passes_pct\">88.7</td><td class=\"right\" data-stat=\"progressive_passes\">58</td><td class=\"right group_start\" data-stat=\"carries\">706</td><td class=\"right\" data-stat=\"progressive_carries\">34</td><td class=\"right group_start\" data-stat=\"take_ons\">15</td><td class=\"right\" data-stat=\"take_ons_won\">4</td></tr> </tfoot>"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "home_balise = f'stats_{home_id}_summary'\n",
-    "soup.find(id=home_balise).find('tfoot')"
+    "# Parse general stats home team table \n",
+    "home_balise_general_stats = f'stats_{home_id}_summary'\n",
+    "soup.find(id=home_balise_general_stats).find('tfoot')"
    ]
   },
   {
@@ -282,55 +283,152 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# General stats\n",
+    "h_goals = soup.find(id=home_balise_general_stats).find('tfoot').find(\"td\", attrs={'data-stat': 'goals'}).string\n",
+    "h_assists = soup.find(id=home_balise_general_stats).find('tfoot').find(\"td\", attrs={'data-stat': 'assists'}).string\n",
+    "h_pens_scored = soup.find(id=home_balise_general_stats).find('tfoot').find(\"td\", attrs={'data-stat': 'pens_made'}).string\n",
+    "h_pens_att = soup.find(id=home_balise_general_stats).find('tfoot').find(\"td\", attrs={'data-stat': 'pens_att'}).string\n",
+    "h_shots = soup.find(id=home_balise_general_stats).find('tfoot').find(\"td\", attrs={'data-stat': 'shots'}).string\n",
+    "h_shots_on_target = soup.find(id=home_balise_general_stats).find('tfoot').find(\"td\", attrs={'data-stat': 'shots_on_target'}).string\n",
+    "h_touches = soup.find(id=home_balise_general_stats).find('tfoot').find(\"td\", attrs={'data-stat': 'touches'}).string\n",
+    "h_xg = soup.find(id=home_balise_general_stats).find('tfoot').find(\"td\", attrs={'data-stat': 'xg'}).string\n",
+    "h_npxg = soup.find(id=home_balise_general_stats).find('tfoot').find(\"td\", attrs={'data-stat': 'npxg'}).string\n",
+    "h_npxg = soup.find(id=home_balise_general_stats).find('tfoot').find(\"td\", attrs={'data-stat': 'npxg'}).string\n",
+    "h_xg_assist = soup.find(id=home_balise_general_stats).find('tfoot').find(\"td\", attrs={'data-stat': 'xg_assist'}).string\n",
+    "h_sca = soup.find(id=home_balise_general_stats).find('tfoot').find(\"td\", attrs={'data-stat': 'sca'}).string\n",
+    "h_gca = soup.find(id=home_balise_general_stats).find('tfoot').find(\"td\", attrs={'data-stat': 'gca'}).string\n",
+    "h_passes = soup.find(id=home_balise_general_stats).find('tfoot').find(\"td\", attrs={'data-stat': 'passes'}).string\n",
+    "h_passes_completed = soup.find(id=home_balise_general_stats).find('tfoot').find(\"td\", attrs={'data-stat': 'passes_completed'}).string\n",
+    "h_progressive_passes = soup.find(id=home_balise_general_stats).find('tfoot').find(\"td\", attrs={'data-stat': 'progressive_passes'}).string\n",
+    "h_carries = soup.find(id=home_balise_general_stats).find('tfoot').find(\"td\", attrs={'data-stat': 'carries'}).string\n",
+    "h_progressive_carries = soup.find(id=home_balise_general_stats).find('tfoot').find(\"td\", attrs={'data-stat': 'progressive_carries'}).string\n",
+    "h_take_ons = soup.find(id=home_balise_general_stats).find('tfoot').find(\"td\", attrs={'data-stat': 'take_ons'}).string\n",
+    "h_take_ons_won = soup.find(id=home_balise_general_stats).find('tfoot').find(\"td\", attrs={'data-stat': 'take_ons_won'}).string\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Passing stats\n",
+    "home_balise_passing_stats = f'stats_{home_id}_passing'\n",
+    "soup.find(id=home_balise_passing_stats).find('tfoot')\n",
+    "\n",
+    "h_pass_xa = soup.find(id=home_balise_passing_stats).find('tfoot').find(\"td\", attrs={'data-stat': 'pass_xa'}).string\n",
+    "h_pass_final_third = soup.find(id=home_balise_passing_stats).find('tfoot').find(\"td\", attrs={'data-stat': 'passes_into_final_third'}).string\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Passing type stats\n",
+    "home_balise_passing_type_stats = f'stats_{home_id}_passing_types'\n",
+    "soup.find(id=home_balise_passing_type_stats).find('tfoot')\n",
+    "\n",
+    "h_corner_kicks = soup.find(id=home_balise_passing_type_stats).find('tfoot').find(\"td\", attrs={'data-stat': 'corner_kicks'}).string\n",
+    "h_crosses = soup.find(id=home_balise_passing_type_stats).find('tfoot').find(\"td\", attrs={'data-stat': 'crosses'}).string\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Defensive stats\n",
+    "home_balise_defensive_stats = f'stats_{home_id}_defense'\n",
+    "soup.find(id=home_balise_defensive_stats).find('tfoot')\n",
+    "\n",
+    "h_tackles = soup.find(id=home_balise_defensive_stats).find('tfoot').find(\"td\", attrs={'data-stat': 'tackles'}).string\n",
+    "h_tackles_won = soup.find(id=home_balise_defensive_stats).find('tfoot').find(\"td\", attrs={'data-stat': 'tackles_won'}).string\n",
+    "h_challenges = soup.find(id=home_balise_defensive_stats).find('tfoot').find(\"td\", attrs={'data-stat': 'challenges'}).string\n",
+    "h_challenges_success = soup.find(id=home_balise_defensive_stats).find('tfoot').find(\"td\", attrs={'data-stat': 'challenge_tackles'}).string\n",
+    "h_blocks = soup.find(id=home_balise_defensive_stats).find('tfoot').find(\"td\", attrs={'data-stat': 'blocks'}).string\n",
+    "h_interceptions = soup.find(id=home_balise_defensive_stats).find('tfoot').find(\"td\", attrs={'data-stat': 'interceptions'}).string\n",
+    "h_errors = soup.find(id=home_balise_defensive_stats).find('tfoot').find(\"td\", attrs={'data-stat': 'errors'}).string\n",
+    "h_clearances = soup.find(id=home_balise_defensive_stats).find('tfoot').find(\"td\", attrs={'data-stat': 'clearances'}).string\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Possession stats\n",
+    "home_balise_possession_stats = f'stats_{home_id}_possession'\n",
+    "soup.find(id=home_balise_possession_stats).find('tfoot')\n",
+    "\n",
+    "h_touches_def_pen_area = soup.find(id=home_balise_possession_stats).find('tfoot').find(\"td\", attrs={'data-stat': 'touches_def_pen_area'}).string\n",
+    "h_touches_def_3rd = soup.find(id=home_balise_possession_stats).find('tfoot').find(\"td\", attrs={'data-stat': 'touches_def_3rd'}).string\n",
+    "h_touches_mid_3rd = soup.find(id=home_balise_possession_stats).find('tfoot').find(\"td\", attrs={'data-stat': 'touches_mid_3rd'}).string\n",
+    "h_touches_att_3rd = soup.find(id=home_balise_possession_stats).find('tfoot').find(\"td\", attrs={'data-stat': 'touches_att_3rd'}).string\n",
+    "h_touches_att_pen_area = soup.find(id=home_balise_possession_stats).find('tfoot').find(\"td\", attrs={'data-stat': 'touches_att_pen_area'}).string\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Miscellaneous stats\n",
+    "home_balise_misc_stats = f'stats_{home_id}_misc'\n",
+    "soup.find(id=home_balise_misc_stats).find('tfoot')\n",
+    "\n",
+    "h_aerials_won = soup.find(id=home_balise_misc_stats).find('tfoot').find(\"td\", attrs={'data-stat': 'aerials_won'}).string\n",
+    "h_aerials_lost = soup.find(id=home_balise_misc_stats).find('tfoot').find(\"td\", attrs={'data-stat': 'aerials_lost'}).string\n",
+    "h_cards_yellow = soup.find(id=home_balise_misc_stats).find('tfoot').find(\"td\", attrs={'data-stat': 'cards_yellow'}).string\n",
+    "h_cards_red = soup.find(id=home_balise_misc_stats).find('tfoot').find(\"td\", attrs={'data-stat': 'cards_red'}).string\n",
+    "h_cards_yellow_red = soup.find(id=home_balise_misc_stats).find('tfoot').find(\"td\", attrs={'data-stat': 'cards_yellow_red'}).string\n",
+    "h_fouls = soup.find(id=home_balise_misc_stats).find('tfoot').find(\"td\", attrs={'data-stat': 'fouls'}).string\n",
+    "h_fouled = soup.find(id=home_balise_misc_stats).find('tfoot').find(\"td\", attrs={'data-stat': 'fouled'}).string\n",
+    "h_pens_conceded = soup.find(id=home_balise_misc_stats).find('tfoot').find(\"td\", attrs={'data-stat': 'pens_conceded'}).string\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Keeper stats\n",
+    "home_balise_keeper_stats = f'keeper_stats_{home_id}'\n",
+    "h_gk_shots_target_against = soup.find(id=home_balise_keeper_stats).find(\"td\", attrs={'data-stat': 'gk_shots_on_target_against'}).string\n",
+    "h_gk_goals_against = soup.find(id=home_balise_keeper_stats).find(\"td\", attrs={'data-stat': 'gk_goals_against'}).string\n",
+    "h_gk_saves = soup.find(id=home_balise_keeper_stats).find(\"td\", attrs={'data-stat': 'gk_saves'}).string\n",
+    "h_gk_psxg = soup.find(id=home_balise_keeper_stats).find(\"td\", attrs={'data-stat': 'gk_psxg'}).string\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0.9'"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   },
   {
