--- a/notebooks/Exploration_ season calendars & teams (23-24).ipynb
+++ b/notebooks/Exploration_ season calendars & teams (23-24).ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "2ae45fde-ad83-495a-aaf9-4f71dbd07841",
    "metadata": {
     "ExecuteTime": {
@@ -73,17 +73,273 @@
      "shell.execute_reply.started": "2024-11-14T15:26:29.219948Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Wk</th>\n",
+       "      <th>Day</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Time</th>\n",
+       "      <th>Home</th>\n",
+       "      <th>xG</th>\n",
+       "      <th>Score</th>\n",
+       "      <th>xG.1</th>\n",
+       "      <th>Away</th>\n",
+       "      <th>Attendance</th>\n",
+       "      <th>Venue</th>\n",
+       "      <th>Referee</th>\n",
+       "      <th>Match Report</th>\n",
+       "      <th>Notes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Fri</td>\n",
+       "      <td>2023-08-11</td>\n",
+       "      <td>20:00</td>\n",
+       "      <td>Burnley</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>0–3</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>Manchester City</td>\n",
+       "      <td>21572.0</td>\n",
+       "      <td>Turf Moor</td>\n",
+       "      <td>Craig Pawson</td>\n",
+       "      <td>Match Report</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Sat</td>\n",
+       "      <td>2023-08-12</td>\n",
+       "      <td>12:30</td>\n",
+       "      <td>Arsenal</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>2–1</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>Nott'ham Forest</td>\n",
+       "      <td>59984.0</td>\n",
+       "      <td>Emirates Stadium</td>\n",
+       "      <td>Michael Oliver</td>\n",
+       "      <td>Match Report</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Sat</td>\n",
+       "      <td>2023-08-12</td>\n",
+       "      <td>15:00</td>\n",
+       "      <td>Everton</td>\n",
+       "      <td>2.7</td>\n",
+       "      <td>0–1</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>Fulham</td>\n",
+       "      <td>39940.0</td>\n",
+       "      <td>Goodison Park</td>\n",
+       "      <td>Stuart Attwell</td>\n",
+       "      <td>Match Report</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Sat</td>\n",
+       "      <td>2023-08-12</td>\n",
+       "      <td>15:00</td>\n",
+       "      <td>Sheffield Utd</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0–1</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>Crystal Palace</td>\n",
+       "      <td>31194.0</td>\n",
+       "      <td>Bramall Lane</td>\n",
+       "      <td>John Brooks</td>\n",
+       "      <td>Match Report</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Sat</td>\n",
+       "      <td>2023-08-12</td>\n",
+       "      <td>15:00</td>\n",
+       "      <td>Brighton</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4–1</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>Luton Town</td>\n",
+       "      <td>31872.0</td>\n",
+       "      <td>The American Express Community Stadium</td>\n",
+       "      <td>David Coote</td>\n",
+       "      <td>Match Report</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Sat</td>\n",
+       "      <td>2023-08-12</td>\n",
+       "      <td>15:00</td>\n",
+       "      <td>Bournemouth</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>1–1</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>West Ham</td>\n",
+       "      <td>11245.0</td>\n",
+       "      <td>Vitality Stadium</td>\n",
+       "      <td>Peter Bankes</td>\n",
+       "      <td>Match Report</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Sat</td>\n",
+       "      <td>2023-08-12</td>\n",
+       "      <td>17:30</td>\n",
+       "      <td>Newcastle Utd</td>\n",
+       "      <td>3.3</td>\n",
+       "      <td>5–1</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>Aston Villa</td>\n",
+       "      <td>52207.0</td>\n",
+       "      <td>St James' Park</td>\n",
+       "      <td>Andy Madley</td>\n",
+       "      <td>Match Report</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Sun</td>\n",
+       "      <td>2023-08-13</td>\n",
+       "      <td>14:00</td>\n",
+       "      <td>Brentford</td>\n",
+       "      <td>2.2</td>\n",
+       "      <td>2–2</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>Tottenham</td>\n",
+       "      <td>17066.0</td>\n",
+       "      <td>Gtech Community Stadium</td>\n",
+       "      <td>Robert Jones</td>\n",
+       "      <td>Match Report</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Sun</td>\n",
+       "      <td>2023-08-13</td>\n",
+       "      <td>16:30</td>\n",
+       "      <td>Chelsea</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>1–1</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>Liverpool</td>\n",
+       "      <td>40096.0</td>\n",
+       "      <td>Stamford Bridge</td>\n",
+       "      <td>Anthony Taylor</td>\n",
+       "      <td>Match Report</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Mon</td>\n",
+       "      <td>2023-08-14</td>\n",
+       "      <td>20:00</td>\n",
+       "      <td>Manchester Utd</td>\n",
+       "      <td>2.2</td>\n",
+       "      <td>1–0</td>\n",
+       "      <td>2.2</td>\n",
+       "      <td>Wolves</td>\n",
+       "      <td>73358.0</td>\n",
+       "      <td>Old Trafford</td>\n",
+       "      <td>Simon Hooper</td>\n",
+       "      <td>Match Report</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Wk  Day        Date   Time            Home   xG Score  xG.1  \\\n",
+       "0  1.0  Fri  2023-08-11  20:00         Burnley  0.3   0–3   1.9   \n",
+       "1  1.0  Sat  2023-08-12  12:30         Arsenal  0.8   2–1   1.2   \n",
+       "2  1.0  Sat  2023-08-12  15:00         Everton  2.7   0–1   1.5   \n",
+       "3  1.0  Sat  2023-08-12  15:00   Sheffield Utd  0.5   0–1   1.9   \n",
+       "4  1.0  Sat  2023-08-12  15:00        Brighton  4.0   4–1   1.5   \n",
+       "5  1.0  Sat  2023-08-12  15:00     Bournemouth  1.3   1–1   1.1   \n",
+       "6  1.0  Sat  2023-08-12  17:30   Newcastle Utd  3.3   5–1   1.8   \n",
+       "7  1.0  Sun  2023-08-13  14:00       Brentford  2.2   2–2   1.3   \n",
+       "8  1.0  Sun  2023-08-13  16:30         Chelsea  1.4   1–1   1.3   \n",
+       "9  1.0  Mon  2023-08-14  20:00  Manchester Utd  2.2   1–0   2.2   \n",
+       "\n",
+       "              Away  Attendance                                   Venue  \\\n",
+       "0  Manchester City     21572.0                               Turf Moor   \n",
+       "1  Nott'ham Forest     59984.0                        Emirates Stadium   \n",
+       "2           Fulham     39940.0                           Goodison Park   \n",
+       "3   Crystal Palace     31194.0                            Bramall Lane   \n",
+       "4       Luton Town     31872.0  The American Express Community Stadium   \n",
+       "5         West Ham     11245.0                        Vitality Stadium   \n",
+       "6      Aston Villa     52207.0                          St James' Park   \n",
+       "7        Tottenham     17066.0                 Gtech Community Stadium   \n",
+       "8        Liverpool     40096.0                         Stamford Bridge   \n",
+       "9           Wolves     73358.0                            Old Trafford   \n",
+       "\n",
+       "          Referee  Match Report  Notes  \n",
+       "0    Craig Pawson  Match Report    NaN  \n",
+       "1  Michael Oliver  Match Report    NaN  \n",
+       "2  Stuart Attwell  Match Report    NaN  \n",
+       "3     John Brooks  Match Report    NaN  \n",
+       "4     David Coote  Match Report    NaN  \n",
+       "5    Peter Bankes  Match Report    NaN  \n",
+       "6     Andy Madley  Match Report    NaN  \n",
+       "7    Robert Jones  Match Report    NaN  \n",
+       "8  Anthony Taylor  Match Report    NaN  \n",
+       "9    Simon Hooper  Match Report    NaN  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# get the table of fixtures\n",
     "df = pd.read_html(url, \n",
     "                 attrs={\"id\":\"sched_2023-2024_9_1\"}\n",
-    "                 )"
+    "                 )\n",
+    "df[0].head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "a1b5e689-de89-4b0f-85cf-d49dcb70f7dd",
    "metadata": {
     "ExecuteTime": {
